--- a/MyWalletSaver/OperationTableViewCell.xib
+++ b/MyWalletSaver/OperationTableViewCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="55" id="KGk-i7-Jjw" customClass="RecentOperationTableViewCell" customModule="MyWalletSaver" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="55" id="KGk-i7-Jjw" customClass="RecentOperationTableViewCell" customModule="WalletTracker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -16,27 +16,28 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1G-Kj-HEC">
-                        <rect key="frame" x="8" y="17" width="85" height="21"/>
+                        <rect key="frame" x="1" y="18" width="85" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="85" id="uhA-rO-Y12"/>
+                            <constraint firstAttribute="width" constant="85" id="jVI-ju-qww"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMc-T2-8hS">
-                        <rect key="frame" x="182" y="17" width="130" height="21"/>
+                        <rect key="frame" x="1" y="39" width="130" height="12"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="130" id="Cld-Yx-bt4"/>
+                            <constraint firstAttribute="width" constant="130" id="sG2-3k-Oj8"/>
+                            <constraint firstAttribute="height" constant="12" id="yDa-sR-UJt"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0nw-WU-KqG">
-                        <rect key="frame" x="115" y="17" width="59" height="21"/>
+                        <rect key="frame" x="268" y="29" width="51" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="59" id="NQo-ef-vZ4"/>
+                            <constraint firstAttribute="width" constant="51" id="o6U-Fn-taD"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,15 +45,13 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="0nw-WU-KqG" firstAttribute="firstBaseline" secondItem="O1G-Kj-HEC" secondAttribute="firstBaseline" constant="-1" id="30d-nz-Bis"/>
-                    <constraint firstItem="O1G-Kj-HEC" firstAttribute="baseline" secondItem="0nw-WU-KqG" secondAttribute="baseline" id="5hM-F8-SwS"/>
-                    <constraint firstItem="VMc-T2-8hS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="AVr-bG-JM0"/>
-                    <constraint firstItem="0nw-WU-KqG" firstAttribute="leading" secondItem="O1G-Kj-HEC" secondAttribute="trailing" constant="22" id="LIg-tH-YHN"/>
-                    <constraint firstItem="VMc-T2-8hS" firstAttribute="firstBaseline" secondItem="0nw-WU-KqG" secondAttribute="firstBaseline" constant="-1" id="hrf-U6-3Ag"/>
-                    <constraint firstItem="0nw-WU-KqG" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="-15.5" id="ojh-ju-PBe"/>
-                    <constraint firstItem="VMc-T2-8hS" firstAttribute="leading" secondItem="0nw-WU-KqG" secondAttribute="trailing" constant="8" id="qnM-Zd-klA"/>
-                    <constraint firstItem="0nw-WU-KqG" firstAttribute="baseline" secondItem="VMc-T2-8hS" secondAttribute="baseline" constant="-1" id="uTi-OL-IAz"/>
-                    <constraint firstItem="O1G-Kj-HEC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="yOV-bV-gfM"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="0nw-WU-KqG" secondAttribute="trailing" constant="-7" id="DaX-IT-cKb"/>
+                    <constraint firstItem="O1G-Kj-HEC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-7" id="OFW-4c-p2U"/>
+                    <constraint firstItem="VMc-T2-8hS" firstAttribute="leading" secondItem="O1G-Kj-HEC" secondAttribute="leading" id="OrC-OT-QEz"/>
+                    <constraint firstItem="O1G-Kj-HEC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="eCX-AO-d7d"/>
+                    <constraint firstItem="0nw-WU-KqG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="rOu-aH-DiD"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="VMc-T2-8hS" secondAttribute="bottom" constant="-4.5" id="sdB-KI-01d"/>
+                    <constraint firstItem="VMc-T2-8hS" firstAttribute="top" secondItem="O1G-Kj-HEC" secondAttribute="bottom" id="usR-aT-MXT"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
